# CrCNN

./: .gitignore  README.md
BinarySearchAnalysis/: binary_search_noPow_32Th  outputBS
CrCNN/: .gitignore  Makefile
CrCNN/include/h5/: h5_gen.mod  h5e.mod  h5g.mod  h5lt.mod  h5lt_const.mod  h5t.mod  h5tb.mod  h5tb_const.mod
CrCNN/include/mnist/: README
CrCNN/include/seal/: bigpoly.h  biguint.h  defaultparams.h  encryptionparams.h  evaluationkeys.h  randomgen.h  smallmodulus.h
CrCNN/include/seal/util/: baseconverter.h  common.h  defines.h  hash.h  ntt.h  polyarith.h  polyarithmod.h  polyarithsmallmod.h  polycore.h  randomtostd.h  uintarithsmallmod.h
CrCNN/src/: H5Easy.cpp  batchNormLayer.cpp  batchNormLayer.h  cnnBuilder.h  convolutionalLayer.cpp  network.cpp  poolingLayer.h  squareLayer.cpp  utils.cpp
Doc/: Kuri0OOAP0M17.bib  Tesi.lyx
Doc/Img/: Immagini_tesi.pptx
ExperimentalResults/: binary_search  binary_search_Pow_40Th  binary_search_Pow_40Th__10Runs  binary_search_Pow_40Th__10Runs_32Imgs  binary_search_Pow_40Th__10Runs_32Imgs_2  binary_search_Pow_40Th__10Runs_32Imgs_3  binary_search_Pow_40Th__10Runs_32Imgs_4  binary_search_noPow_40Th  outputApproxBS  outputBS  plotBS.py  startingPlots.py  timing_approx_different_threads  timing_test  timings.py  timings_t_2**30
PlainModel/: ApproxPlainModel.h5  ApproxPlainModel.pth  CustomAvgPool2d.py  CustomAvgPool2dModule.py  PlainModel.h5  PlainModel.pth  PlainModel.py  PlainModel2.py  PlainModelTiny.h5  PlainModelTiny.pth  PlainModelTiny.py  PlainModelWoPad.h5  PlainModelWoPad.pth  ReadH5Model.cpp  Square.py  SquareModule.py  TestPlainModel.py  ToH5.py  predictionsApproxPlainModel.csv  predictionsPlainModelTiny.csv  predictionsPlainModelWoPad.csv  resultApproxPlainModel.csv  resultPlainModelTiny.csv  resultPlainModelWoPad.csv
PlainModelAnalysis/: rangeAlgebra.py
SEAL_2.3.1/: INSTALL.txt  README.md  SEAL.sln
SEAL_2.3.1/SEAL/: CMakeLists.txt  SEAL.vcxproj  SEAL.vcxproj.filters
SEAL_2.3.1/SEAL/cmake/: Findmsgsl.cmake  SEALConfig.cmake.in
SEAL_2.3.1/SEAL/seal/: CMakeLists.txt  bigpoly.cpp  bigpoly.h  bigpolyarray.h  biguint.cpp  biguint.h  chooser.cpp  chooser.h  ciphertext.h  context.cpp  context.h  decryptor.cpp  decryptor.h  defaultparams.h  encoder.cpp  encoder.h  encryptionparams.cpp  encryptionparams.h  encryptor.cpp  encryptor.h  evaluationkeys.cpp  evaluationkeys.h  evaluator.cpp  evaluator.h  galoiskeys.cpp  galoiskeys.h  keygenerator.cpp  keygenerator.h  memorypoolhandle.h  plaintext.cpp  plaintext.h  polycrt.cpp  polycrt.h  publickey.h  randomgen.cpp  randomgen.h  seal.h  secretkey.h  simulator.cpp  simulator.h  (+4 more)
SEAL_2.3.1/SEAL/seal/util/: CMakeLists.txt  baseconverter.cpp  baseconverter.h  clang.h  clipnormal.h  common.h  computation.h  config.h.in  defines.h  gcc.h  globals.cpp  globals.h  hash.h  locks.h  mempool.cpp  mempool.h  msvc.h  ntt.cpp  ntt.h  numth.h  nussbaumer.h  polyarith.cpp  polyarith.h  polyarithmod.h  polyarithsmallmod.cpp  polyarithsmallmod.h  polycore.h  polyfftmultmod.h  polyfftmultsmallmod.h  polymodulus.h  randomtostd.h  smallntt.cpp  smallntt.h  uintarith.cpp  uintarith.h  uintarithmod.h  uintarithsmallmod.cpp  uintarithsmallmod.h  uintcore.h
SEAL_2.3.1/SEALExamples/: CMakeLists.txt  SEALExamples.vcxproj  SEALExamples.vcxproj.filters  main.cpp
SEAL_2.3.1/SEALNET/: SEALNET.vcxproj
SEAL_2.3.1/SEALNET/sealnet/: BigPolyArrayWrapper.cpp  BigPolyWrapper.cpp  BigUIntWrapper.cpp  ChooserWrapper.cpp  ChooserWrapper.h  CiphertextWrapper.cpp  CiphertextWrapper.h  ContextWrapper.cpp  ContextWrapper.h  DecryptorWrapper.cpp  DecryptorWrapper.h  DefaultParamsWrapper.cpp  DefaultParamsWrapper.h  EncoderWrapper.cpp  EncoderWrapper.h  EncryptionParamsWrapper.cpp  EncryptionParamsWrapper.h  EncryptorWrapper.cpp  EncryptorWrapper.h  EvaluationKeysWrapper.cpp  EvaluatorWrapper.cpp  EvaluatorWrapper.h  GaloisKeysWrapper.cpp  KeyGeneratorWrapper.cpp  KeyGeneratorWrapper.h  MemoryPoolHandleWrapper.cpp  MemoryPoolHandleWrapper.h  PlaintextWrapper.cpp  PlaintextWrapper.h  PolyCRTWrapper.cpp  PolyCRTWrapper.h  PublicKeyWrapper.cpp  SecretKeyWrapper.cpp  SecretKeyWrapper.h  SimulatorWrapper.cpp  SimulatorWrapper.h  SmallModulusWrapper.cpp
SEAL_2.3.1/SEALNETExamples/: Program.cs
SEAL_2.3.1/SEALNETTest/: EncoderWrapper.cs  EncryptorWrapper.cs  EvaluatorWrapper.cs  KeyGeneratorWrapper.cs
SEAL_2.3.1/SEALTest/: SEALTest.vcxproj  bigpoly.cpp  bigpolyarray.cpp  biguint.cpp  ciphertext.cpp  context.cpp  encoder.cpp  evaluationkeys.cpp  evaluator.cpp  galoiskeys.cpp  keygenerator.cpp  memorypoolhandle.cpp  plaintext.cpp  randomgen.cpp
SEAL_2.3.1/SEALTest/util/: locks.cpp  mempool.cpp  modulus.cpp  ntt.cpp  nussbaumer.cpp  polyarithmod.cpp  polyarithsmallmod.cpp  polyfftmultmod.cpp  polyfftmultsmallmod.cpp  smallntt.cpp  uintcore.cpp
SealNet/: Makefile
SealNet/include/h5/: H5f90i_gen.h  H5pubconf.h  h5a.mod  h5d.mod  h5ds.mod  h5f.mod  h5fortran_types.mod  h5global.mod  h5i.mod  h5im.mod  h5l.mod  h5lib.mod  h5o.mod  h5p.mod  h5r.mod  h5s.mod  h5z.mod  hdf5.mod
SealNet/include/mnist/: mnist_reader.h  mnist_reader_less.h
SealNet/include/seal/: bigpolyarray.h  chooser.h  ciphertext.h  context.h  decryptor.h  encoder.h  encryptor.h  evaluator.h  galoiskeys.h  keygenerator.h  memorypoolhandle.h  plaintext.h  polycrt.h  publickey.h  seal.h  secretkey.h  simulator.h  utilities.h
SealNet/include/seal/util/: clang.h  gcc.h  (+15 more)
SealNet/src/: H5Easy.h  MNIST_Architecture.h  ReadH5Model.cpp  avgPoolingLayer.cpp  avgPoolingLayer.h  batchNormLayer.cpp  batchNormLayer.h  ciphertextIO.cpp  ciphertextIO.h  cnnBuilder.cpp  cnnBuilder.h  convolutionalLayer.cpp  convolutionalLayer.h  fullyConnectedLayer.cpp  fullyConnectedLayer.h  globals.cpp  globals.h  layer.cpp  layer.h  main.cpp  main_encrypt_MNIST.cpp  mainconv.cpp  mainfc.cpp  mainlabels.cpp  mainnet.cpp  mainparams.cpp  mainprovabatchnorm.cpp  mainsimulator.cpp  mainsq.cpp  network.cpp  network.h  optimalParametersChooser.cpp  optimalParametersChooser.h  poolingLayer.cpp  poolingLayer.h  prova.cpp  provanewNet.cpp  squareLayer.cpp  squareLayer.h  utils.cpp  (+1 more)
